WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49247
SVGFETileElement doesn't support dynamic invalidation
https://bugs.webkit.org/show_bug.cgi?id=49247
Summary
SVGFETileElement doesn't support dynamic invalidation
Renata Hodovan
Reported
2010-11-09 04:46:14 PST
SVGFETileElement doesn't support dynamic invalidation
Attachments
Patch
(124.14 KB, patch)
2010-11-09 04:54 PST
,
Renata Hodovan
zimmermann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Renata Hodovan
Comment 1
2010-11-09 04:54:05 PST
Created
attachment 73360
[details]
Patch
Nikolas Zimmermann
Comment 2
2010-11-09 05:02:16 PST
Comment on
attachment 73360
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=73360&action=review
Looks great, just found a typo in the ChangeLog.
> WebCore/ChangeLog:8 > + The dynamic changes are captured by the svgAttributeChange function, and invalidate the filter primitive if necessary.
Typo: svgAttributeChanged. s/, and invalidate/. Invalidate/
Renata Hodovan
Comment 3
2010-11-09 23:04:24 PST
Landed in 71630:
http://trac.webkit.org/changeset/71630
Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug