SVGFETileElement doesn't support dynamic invalidation, when attributes change. https://bugs.webkit.org/show_bug.cgi?id=49247

Patch by Renata Hodovan <reni@webkit.org> on 2010-11-09
Reviewed by Nikolas Zimmermann.

WebCore:

The dynamic changes are captured by the svgAttributeChanged function. Invalidate the filter primitive if necessary.

Tests: svg/dynamic-updates/SVGFETileElement-dom-in-attr.html
       svg/dynamic-updates/SVGFETileElement-svgdom-in-prop.html

* svg/SVGFETileElement.cpp:
(WebCore::SVGFETileElement::svgAttributeChanged):
* svg/SVGFETileElement.h:

LayoutTests:

Adding layout tests for feTile dynamic changes.

* platform/mac/svg/dynamic-updates/SVGFETileElement-dom-in-attr-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFETileElement-dom-in-attr-expected.png: Added.
* platform/mac/svg/dynamic-updates/SVGFETileElement-svgdom-in-prop-expected.checksum: Added.
* platform/mac/svg/dynamic-updates/SVGFETileElement-svgdom-in-prop-expected.png: Added.
* svg/dynamic-updates/SVGFETileElement-dom-in-attr-expected.txt: Added.
* svg/dynamic-updates/SVGFETileElement-dom-in-attr.html: Added.
* svg/dynamic-updates/SVGFETileElement-svgdom-in-prop-expected.txt: Added.
* svg/dynamic-updates/SVGFETileElement-svgdom-in-prop.html: Added.
* svg/dynamic-updates/script-tests/SVGFETileElement-dom-in-attr.js: Added.
(executeTest):
* svg/dynamic-updates/script-tests/SVGFETileElement-svgdom-in-prop.js: Added.
(executeTest):



Canonical link: https://commits.webkit.org/62117@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71630 268f45cc-cd09-0410-ab3c-d52691b4dbfc